--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
                         </a>
 
                         <a href="https://www.instagram.com/elzeeandtheweb/" target="_blank">
-                            <img src="./assets/images/instagram-dreamstale43.png" alt="linkedin" class="social-overflow-dreamstale53">
+                            <img src="./assets/images/instagram-dreamstale43.png" alt="insta" class="social-overflow-dreamstale53">
+                        </a>
+
+                        <a href="https://twitter.com/NodeJS_is_life" target="_blank">
+                            <img src="./assets/images/twitter-dreamstale71.png" alt="twitter" class="social-overflow-dreamstale53">
                         </a>
                         <p>ELZEEANDTHEWEB@GMAIL.COM</p>
                     </div>
@@ -207,7 +211,9 @@
                                         <a href="https://lauras5.github.io/week-4-game/" target='_blank'>
                                             <img src="assets/images/rpggame.JPG" alt="rpg game" class="portfolioImages">
                                         </a>
-                                        <figcaption>RPG Game</figcaption>
+                                        <figcaption>
+                                            <span class='gameNames'>RPG Game</span>
+                                        </figcaption>
                                     </figure>
                                 </div>
                                 <div class="col-md">
@@ -215,7 +221,9 @@
                                         <a href="https://lauras5.github.io/TriviaGame/" target='_blank'>
                                             <img src="assets/images/trivia.JPG" alt="trivia" class="portfolioImages">
                                         </a>
-                                        <figcaption>Trivia Game</figcaption>
+                                        <figcaption>
+                                            <span class='gameNames'>Anime Trivia Game</span>
+                                        </figcaption>
                                     </figure>
                                 </div>
                                 <div class="col-md">
@@ -223,7 +231,9 @@
                                         <a href="https://lauras5.github.io/Firebase-Train/" target='_blank'>
                                             <img src="assets/images/firebasetrains.JPG" alt="train app" class="portfolioImages">
                                         </a>
-                                        <figcaption>Train Tracker</figcaption>
+                                        <figcaption>
+                                            <span class='gameNames'>Train Tracker</span>
+                                        </figcaption>
                                     </figure>
                                 </div>
                                 <div class="col-md">
@@ -231,7 +241,9 @@
                                         <a href="https://lauras5.github.io/Hangman-Game/" target='_blank'>
                                             <img src="assets/images/hangman.jpg" alt="hangman game" class="portfolioImages">
                                         </a>
-                                        <figcaption>90's Hangman Game</figcaption>
+                                        <figcaption>
+                                            <span class='gameNames'>90's Hangman</span>
+                                        </figcaption>
                                     </figure>
                                 </div>
 
@@ -240,7 +252,9 @@
                                         <a href="https://lauras5.github.io/Psychic-Game/" target='_blank'>
                                             <img src="assets/images/psychic.JPG" alt="psychic game" class="portfolioImages">
                                         </a>
-                                        <figcaption>Psychic Game</figcaption>
+                                        <figcaption>
+                                            <span class='gameNames'>Psychic Game</span>
+                                        </figcaption>
                                     </figure>
                                 </div>
                                 <div class="col-md">
@@ -248,7 +262,9 @@
                                         <a href="https://obscure-plains-99326.herokuapp.com/" target='_blank'>
                                             <img src="assets/images/burger.JPG" alt="burgerGame" class="portfolioImages">
                                         </a>
-                                        <figcaption>Yum Yum Burgers</figcaption>
+                                        <figcaption>
+                                            <span class='gameNames'>Yum Yum Burger</span>
+                                        </figcaption>
                                     </figure>
                                 </div>
                             </div>
@@ -279,6 +295,9 @@
                     <img src="./assets/images/instagram-dreamstale43.png" alt="linkedin" class="social-overflow-dreamstale53">
                 </a>
 
+                <a href="https://twitter.com/NodeJS_is_life" target="_blank">
+                    <img src="./assets/images/twitter-dreamstale71.png" alt="twitter" class="social-overflow-dreamstale53">
+                </a>
             </div>
         </div>
     </div>
