--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <div class="col-md">
                                     <figure>
                                         <a href="https://totsapp.herokuapp.com/" target='_blank'>
-                                            <img src="./assets/images/tots.jpg" alt="toddler app" class="portfolioImages">
+                                            <img src="./assets/images/tots.JPG" alt="toddler app" class="portfolioImages">
                                         </a>
                                         <figcaption>
                                             <span class='gameNames'>Toddler Learning App</span>
