--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 <div class="col-md">
                                     <figure>
                                         <a href="https://pure-atoll-91754.herokuapp.com/" target='_blank'>
-                                            <img src="./assets/images/clicky.jpg" alt="clicky game" class="portfolioImages">
+                                            <img src="./assets/images/clicky.JPG" alt="clicky game" class="portfolioImages">
                                         </a>
                                         <figcaption>
                                             <span class='gameNames'>Clicky Game</span>
