Broken Link of Linkedin is corrected

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img class="img-responsive img-circle" id="profilePic" src="assets/images/profilepic.jpg" alt="profile image">
                         <h3>Full-Stack Web Developer</h3>
                         <p>Contact : </p>
-                        <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank">
+                        <a href="https://www.linkedin.com/in/devlaura/" target="_blank">
                             <img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45">
                         </a>
 
