--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
-            <li class='nav-item'>
+<!--             <li class='nav-item'>
                 <a class='nav-link' href="http://elzeeandtheweb.com/" target='_blank'>Blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -39,7 +39,7 @@
                     <div id='title'>
                         <h1>LAURA SALCIDO</h1>
                         <img class="img-responsive img-circle" id="profilePic" src="assets/images/profilepic.jpg" alt="profile image">
-                        <h3>Full-Stack Web Developer</h3>
+                        <h3>Senior Software Engineer</h3>
                         <p>Contact : </p>
                         <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank">
                             <img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45">
@@ -48,8 +48,7 @@
                         <a href="https://github.com/lauras5" target="_blank">
                             <img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35">
                         </a>
-
-                        <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank">
+<!--                         <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank">
                             <img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53">
                         </a>
 
@@ -59,8 +58,7 @@
 
                         <a href="https://twitter.com/NodeJS_is_life" target="_blank">
                             <img src="./assets/images/twitter-dreamstale71.png" alt="twitter" class="social-overflow-dreamstale53">
-                        </a>
-                        <p>ELZEEANDTHEWEB@GMAIL.COM</p>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -73,40 +71,38 @@
                         <div class="col-md-6">
                             <div id="mainContent">
                                 <p>
-                                    I am a full stack developer with focus on MERN stack applications. I have a background in art and architectural/interior
-                                    design. I've always had an eye for design, and I am a natural problem solver. My hobbies
-                                    include reading, playing KenKen and spending time with my family! :D
+                                    I collaborate with cross-functional teams to design and implement cutting-edge features for CPDS (Cloud Platform and Data Services) and IBM Integrated Analytic Systems. I leverage my expertise in Python, AI, and web development to optimize code and enhance system performance, resulting in innovative and reliable solutions that drive business success.
                                 </p>
                                 <p>
-                                    I've always been interested in web development, so I signed up for Coding Boot-camp at UCI and I loved it. Thanks to my hard
-                                    work and determination, I recently got a job as a TA for the next Boot-Camp Cohort. I'm
-                                    currently looking for full-time work as a full-stack developer.
+                                    My passion for technology stems from my education background, which includes a Bachelor's degree in Computer Science from Colorado State University and a Coding Bootcamp from UC Irvine. There, I gained a solid foundation in fundamental and emerging technologies, such as JavaScript, React, Node.js, MongoDB, and SQL. I also developed a keen eye for system scalability and efficiency, as well as a leadership role in managing projects from inception to completion.
+                                </p>
+                                <p>
+                                    What sets me apart is my commitment to leveraging technology for social good. I am particularly fascinated by the intersection of AI and sustainable development, and I am eager to explore opportunities where I can apply my expertise to drive innovation in this area. I am also dedicated to promoting diversity and inclusion within the industry and inspiring others in STEM, especially as a woman in tech. My hobbies include reading, playing KenKen and spending time with my family!
                                 </p>
                             </div>
                         </div>
 
                         <div class="col-md-6">
-                            <h4 id='langTitle'>Languages</h4>
+                            <h4 id='langTitle'>Skills</h4>
                             <div id="languages">
                                 <div class="row">
-
                                     <div class="col-md-6">
                                         <ul>
-                                            <li>HTML & CSS</li>
+                                            <li>Python</li>
+                                            <li>Pandas</li>
+                                            <li>Numpy</li>
                                             <li>JavaScript</li>
-                                            <li>Node.js</li>
-                                            <li>Express.js</li>
-                                            <li>MongoDB</li>
+                                            <li>ReactJS</li>
                                         </ul>
                                     </div>
 
                                     <div class="col-md-6">
                                         <ul>
-                                            <li>Mongoose</li>
-                                            <li>MySQL</li>
-                                            <li>React</li>
-                                            <li>.NET</li>
-                                            <li>C#</li>
+                                            <li>SQL</li>
+                                            <li>Docker</li>
+                                            <li>AWS Cloud</li>
+                                            <li>.RustLang</li>
+                                            <li>Bash</li>
                                         </ul>
                                     </div>
 
@@ -120,12 +116,10 @@
 
             <div class="col-md-12">
                 <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-
                     <h2 id="portfolio">Portfolio</h2>
                     <div class="col-md" id="mainContentPortfolio">
                         <div id="portfolio">
                             <div class="row" id='PRows'>
-
                                 <div class="col-md">
                                     <figure>
                                         <a href="https://totsapp.herokuapp.com/" target='_blank'>
@@ -277,7 +271,7 @@
 
         <div class="row">
             <div class="footer">
-                &copy; Copyright Laura Salcido 2018
+                &copy; Copyright Laura Salcido 2024
 
                 <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank">
                     <img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45">
@@ -286,8 +280,7 @@
                 <a href="https://github.com/lauras5" target="_blank">
                     <img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35">
                 </a>
-
-                <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank">
+<!--                 <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank">
                     <img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53">
                 </a>
 
@@ -297,7 +290,7 @@
 
                 <a href="https://twitter.com/NodeJS_is_life" target="_blank">
                     <img src="./assets/images/twitter-dreamstale71.png" alt="twitter" class="social-overflow-dreamstale53">
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
