--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="jumbotron">
                     <div id='title'>
                         <h1>LAURA SALCIDO</h1>
-                        <img class="img-responsive img-circle" id="profilePic" src="assets/images/profilepic.jpg" alt="profile image">
+                        <img class="img-responsive img-circle" id="profilePic" src="assets/images/pfp.jpg" alt="profile image">
                         <h3>Senior Software Engineer</h3>
                         <p>Contact : </p>
                         <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank">
